[package]
name = "buildchain"
version = "0.5.2"
edition = "2021"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
description = "Software for creating and managing a distributed and reproducible chain of builds"
documentation = "https://docs.rs/buildchain"
repository = "https://github.com/pop-os/buildchain"
license = "GPL-3.0-only"

[lib]
name = "buildchain"
path = "src/lib.rs"

[[bin]]
name = "buildchain"
path = "src/main.rs"
doc = false

[dependencies]
base32 = { version = "0.4.0", path = "../vendor/base32" }
clap = "3.2.25"
plain = "0.2.3"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
tempfile = "3.8.0"
